--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "angular": "^1.5.0-beta.0",
     "angular-animate": "^1.4.7",
+    "angular-google-maps": "^2.3.3",
     "angular-mocks": "^1.4.0",
+    "angular-simple-logger": "^0.1.7",
     "angular-ui-bootstrap": "^0.14.3",
     "angular-ui-router": "^0.2.15",
     "babel-preset-es2015": "^6.6.0",
@@ -49,6 +51,7 @@
     "karma-mocha": "^0.1.10",
     "karma-mocha-reporter": "^1.0.2",
     "lodash": "^3.9.3",
+    "ngmap": "^1.17.1",
     "nodemon": "^1.3.7",
     "passport": "^0.2.1",
     "passport-facebook": "^1.0.3",
